# firefly-bot

./: .gitignore  .platform.app.yaml  Dockerfile  LICENSE  Pipfile  README.md  pyproject.toml  requirements.txt
kubernetes/: README.md  deployment.yaml  pvc.yaml  secret.yaml
src/: bot.py  firefly.py
